--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
             <div class="skills-grid">
                 <div class="skill-item">
                     <i class="fab fa-android"></i>
-                    <span data-fa="طراحی و توسعه اپلیکیشن‌های اندروید" data-en="Android Application Design & Development">طراحی و توسعه اپلیکیشن‌های اندروید</span>
+                    <span data-fa="توسعه اپلیکیشن‌های اندروید" data-en="Android Development">توسعه اپلیکیشن‌های اندروید</span>
                 </div>
                 <div class="skill-item">
                     <i class="fab fa-kickstarter-k"></i> 
