--- a/index.html
+++ b/index.html
@@ -1071,7 +1071,7 @@
         });
 
         // Initialize
-        setLanguage('fa'); 
+        setLanguage('en'); 
         changeLinkState(); 
     </script>
 </body>
