--- a/index.html
+++ b/index.html
@@ -802,8 +802,8 @@
                 <div class="social-links">
                     <a href="https://github.com/MehranMrIV" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                     <a href="https://linkedin.com/in/mehranmr17" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                    <a href="https://instagram.com/YOUR_INSTAGRAM_USERNAME" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                    <a href="https://t.me/YOUR_TELEGRAM_USERNAME" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
+                    <a href="https://instagram.com/mehranmr17" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://t.me/mehranmr17" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
                 </div>
             </div>
         </section>
@@ -968,8 +968,8 @@
             <div class="social-links" style="margin-top: 20px; text-align: center;">
                  <a href="https://github.com/MehranMrIV" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                  <a href="https://linkedin.com/in/mehranmr17" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                 <a href="https://instagram.com/YOUR_INSTAGRAM_USERNAME" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-                 <a href="https://t.me/YOUR_TELEGRAM_USERNAME" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
+                 <a href="https://instagram.com/mehranmr17" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                 <a href="https://t.me/mehranmr17" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
             </div>
         </section>
     </main>
