--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
                     <span data-fa="ایران، آذربایجان غربی، ارومیه" data-en="Urmia, West Azerbaijan, Iran" data-ckb="ئێران، ئازەربایجانی ڕۆژاوا، ورمێ"><i class="fas fa-map-marker-alt"></i> ایران، آذربایجان غربی، ارومیه</span>
                 </div>
                 <div class="social-links">
-                    <a href="https://github.com/MehranMrIV" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://github.com/MehranMr17" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                     <a href="https://linkedin.com/in/mehranmr17" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                     <a href="https://instagram.com/mehranmr17" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="https://t.me/mehranmr17" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
@@ -966,7 +966,7 @@
                 <a href="tel:+989035872399"><i class="fas fa-phone"></i> +۹۸۹۰۳۵۸۷۲۳۹۹</a>
             </div>
             <div class="social-links" style="margin-top: 20px; text-align: center;">
-                 <a href="https://github.com/MehranMrIV" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                 <a href="https://github.com/MehranMr17" target="_blank" aria-label="GitHub"><i class="fab fa-github"></i></a>
                  <a href="https://linkedin.com/in/mehranmr17" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
                  <a href="https://instagram.com/mehranmr17" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                  <a href="https://t.me/mehranmr17" target="_blank" aria-label="Telegram"><i class="fab fa-telegram"></i></a>
